--- a/theme/templates/_author-bio.html
+++ b/theme/templates/_author-bio.html
@@ -2,7 +2,7 @@
     <img src="{{ article.author_gravatar }}" class="bio-photo" alt="{{ AUTHOR }} bio photo">
     <h3>{{ article.author }}</h3>
 {% else %}
-    <img src="{{ STATICURL }}/theme/images/mfitzp.png" class="bio-photo" alt="{{ AUTHOR }} bio photo">
+    <img src="{{ STATICURL }}/theme/images/mfitzp.jpg" class="bio-photo" alt="{{ AUTHOR }} bio photo">
     <h3>{{ AUTHOR }}</h3>
 {% endif %}
 
