--- a/theme/templates/_author-bio.html
+++ b/theme/templates/_author-bio.html
@@ -14,6 +14,6 @@
 {% if AUTHOR_EMAIL %}<a href="mailto:{{ AUTHOR_EMAIL }}" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a>{% endif %}
 {% if SOCIAL %}
     {% for name, icon, url in SOCIAL %}
-        <a href="{{ url }}" class="author-social" target="_blank"><i class="fa fa-fw fa-{{ icon }}-square"></i> {{ name }}</a>
+        <a href="{{ url }}" class="author-social" target="_blank"><i class="fa fa-fw fa-{{ icon }}"></i> {{ name }}</a>
     {% endfor %}
 {% endif %} 
