--- a/theme/templates/_author-bio.html
+++ b/theme/templates/_author-bio.html
@@ -11,7 +11,7 @@
 <!--    <p>{{ AUTHOR_ABOUT }}</p> -->
 {% endif %} 
 
-{% if AUTHOR_EMAIL %}<a href="mailto:{{ AUTHOR_EMAIL }}" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a>{% endif %}
+{% if AUTHOR_EMAIL %}<a href="mailto:{{ AUTHOR_EMAIL }}" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-o"></i> Email</a>{% endif %}
 {% if SOCIAL %}
     {% for name, icon, url in SOCIAL %}
         <a href="{{ url }}" class="author-social" target="_blank"><i class="fa fa-fw fa-{{ icon }}"></i> {{ name }}</a>
