--- a/theme/templates/_author-bio.html
+++ b/theme/templates/_author-bio.html
@@ -10,6 +10,7 @@
 {% else %}
 <!--    <p>{{ AUTHOR_ABOUT }}</p> -->
 {% endif %} 
+<!-- <img src="https://s.gravatar.com/avatar/496c29be59a54e53f43c79d5f9b9b380?s=128" class="sidebar-image"> -->
 
 {% if SOCIAL %}
    {% for group in SOCIAL %}
